fix: iFrame sizes for some component feat: Add the Card and Kbd components

--- a/layouts/shortcodes/iframe.html
+++ b/layouts/shortcodes/iframe.html
@@ -1,3 +1,3 @@
 <div style="width: 100%; margin-top: 2rem; ">
-    <iframe src="https://coral-app-ufedz.ondigitalocean.app/{{ .Get 0 }}"  style="width: 100%; height: 24rem"></iframe>        
+    <iframe src="https://coral-app-ufedz.ondigitalocean.app/{{ .Get 0 }}"  style="width: 100%; height: {{ .Get 1 }};"></iframe>        
 </div>
